5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1836_1274.log
== TEST (2019-06-27 10:31:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones(n,n)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:44:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:00:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))

for x range(m + 1):
	g=0
	for y range(m+1):
		m[x,y]=m[x,y]+g
		g=g+1
print(m)
	

-- ERROR:
File "XXXX", line 6
    for x range(m + 1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:00:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))

for x in range(m + 1):
	g=0
	for y in range(m+1):
		m[x,y]=m[x,y]+g
		g=g+1
print(m)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:01:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))

for x in range(m):
	g=0
	for y in range(m):
		m[x,y]=m[x,y]+g
		g=g+1
print(m)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:01:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))

for x in range(n):
	g=0
	for y in range(n):
		m[x,y]=m[x,y]+g
		g=g+1
print(m)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:02:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))

for x in range(n):
	g=0
	print(m)
	for y in range(n):
		m[x,y]=m[x,y]+g
		g=g+1
print(m)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:02:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))

for x in range(n):
	g=0
	print(m)
	for y in range(n):
		m[x,y]=m[x,y]+g
		g=g+1

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:03:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))

for x in range(n):
	g=0
	print(m)
	for y in range(n):
		m[y,x]=m[y,x]+g
		g=g+1

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:04:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))
g = 0
for x in range(n):
	g= g+1
	for y in range(n):
		m[y,x]=m[y,x]+g
		
print(g)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:05:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))
g = 0
for x in range(n):
	g= g+1
	for y in range(n):
		m[y,x]=m[y,x]+g
		
print(m)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:05:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))
g = -1
for x in range(n):
	g= g+1
	for y in range(n):
		m[x,y]=m[x,y]+g
		
print(m)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:07:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("numero inteiro: "))
m = ones((n,n))
g = -1
for x in range(n):
	g= g+1
	for y in range(n):
		m[x+1,y]=m[x,y]+g
		
print(m)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
